--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/kit": "next",
     "carbon-components-svelte": "^0.62.3",
     "carbon-icons-svelte": "^11.0.1",
+    "carbon-preprocess-svelte": "^0.7.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
