--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
 		"svelte": "^3.44.0",
 		"tailwindcss": "^3.0.23"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-forms-lib": "^2.0.1",
+		"yup": "^0.32.11"
+	}
 }
